--- a/assets/hypr/blur.conf
+++ b/assets/hypr/blur.conf
@@ -2,4 +2,7 @@ layerrule = blur, ^(corner.*|ignis_BAR.*|ignis_NOTIFICATION_POPUP.*|ignis_CONTRO
 layerrule = ignorezero, ^(corner.*|ignis_BAR.*|ignis_NOTIFICATION_POPUP.*|ignis_CONTROL_CENTER.*|ignis_POWERMENU.*|ignis_OSD_BL.*|ignis_OSD_VOL_.*)$
 layerrule = xray 0, ^(corner.*|ignis_BAR.*|ignis_NOTIFICATION_POPUP.*|ignis_CONTROL_CENTER.*|ignis_POWERMENU.*|ignis_OSD_BL.*|ignis_OSD_VOL_.*)$
 layerrule = blurpopups, ^(corner.*|ignis_BAR.*|ignis_NOTIFICATION_POPUP.*|ignis_CONTROL_CENTER.*|ignis_POWERMENU.*|ignis_OSD_BL.*|ignis_OSD_VOL_.*)$
+layerrule = animation none, ^(corner.*|ignis_BAR.*|ignis_NOTIFICATION_POPUP.*|ignis_CONTROL_CENTER.*|ignis_POWERMENU.*|ignis_OSD_BL.*|ignis_OSD_VOL_.*)$
+layerrule = animation slide right, ^(ignis_CONTROL_CENTER.*|ignis_OSD_BL.*|ignis_OSD_VOL.*)$
+layerrule = animation none, ^(ignis_media)$
 
